syntax = "proto3";

option go_package = "./userpb";

package user;

service TodoService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message SignUpRequest {
  string name = 1;
  string password = 2;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message SignUpResponse {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
